# Bundle_Adjustment

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Documentation/Destinstion/html/: _base_data_structure_8h.html  _base_data_structure_8h.js  _base_data_structure_8h__dep__incl.map  _base_data_structure_8h__dep__incl.md5  _base_data_structure_8h__incl.map  _base_data_structure_8h__incl.md5  _base_data_structure_8h_source.html  _data_structure_bases_8cpp.html  _data_structure_bases_8cpp.js  _data_structure_bases_8cpp__incl.map  _data_structure_bases_8cpp__incl.md5  _data_structure_bases_8h.html  _data_structure_bases_8h.js  _data_structure_bases_8h__dep__incl.map  _data_structure_bases_8h__dep__incl.md5  _data_structure_bases_8h__incl.map  _data_structure_bases_8h__incl.md5  _data_structure_bases_8h_source.html  _factory_producer_8cpp.html  _factory_producer_8cpp__incl.map  _factory_producer_8cpp__incl.md5  _factory_producer_8h.html  _factory_producer_8h.js  _factory_producer_8h__dep__incl.map  _factory_producer_8h__dep__incl.md5  _factory_producer_8h__incl.map  _factory_producer_8h__incl.md5  _factory_producer_8h_source.html  _generated_data_set__b_a_8cpp-example.html  _generated_data_set__b_a_8h-example.html  _main_page_8md.html  _misc_8h.html  _misc_8h.js  _misc_8h__dep__incl.map  _misc_8h__dep__incl.md5  _misc_8h__incl.map  _misc_8h__incl.md5  _misc_8h_source.html  _o_r_b_data_8h.html  _o_r_b_data_8h.js  (+528 more)
Documentation/Destinstion/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+43 more)
Documentation/Working/: MainPage.md
Examples/Generated_data_BA/: CMakeLists.txt  Generated_dataSet_BA.cpp  Generated_dataSet_BA.h  Reprojection_Generated_dataset.h  main.cpp
Examples/Generated_data_BA/data/: BA_data_generate.ipynb  poses.csv  results.csv
Other/: CMakeLists.txt
Other/Normal_GN/: CMakeLists.txt  my_curvefitting.cpp
Other/Tests/: CMakeLists.txt  tests.cpp
Other/data/: data.csv  landmarks.csv  poses.csv  results.csv
Other/g2o_BA/: CMakeLists.txt  Curvefitting.cpp
Other/python/: BA_data_generate.ipynb  DepthCamera_2024-02-20-11-49-29.json  Matrix_Operations.ipynb  New_data_generate.ipynb  data_generate.ipynb  matrixData.txt  test.ipynb  visualize_mesh.ipynb
Src/: DataStructureBases.cpp  FactoryProducer.cpp  Main.txt  ORBData.cpp  OptimizationAlgorithmBase.cpp  OptimizationAlgorithmGN.cpp  OptimizationAlgorithmLevenberg.cpp  OptimizerBase.cpp  OptimizerFactory.cpp  OptimizerOrbSlam.cpp  ParameterUpdateBase.cpp  ProblemStructure.cpp  ReprojectionBase.cpp  RobustKernels.cpp  Settings.cpp
include/: Basic_functions.h  Bundle_Adjustment.h  Optimization_general.h  OptimizerBase.h  OptimizerOrbSlam.h  data_generate.h  edge_types.h  general_edge.h  general_vertex.h  vertex_types.h
include/Experiments/: DataExtraction.h
include/algorithms/: OptimizationAlgorithmBase.h  OptimizationAlgorithmGN.h  OptimizationAlgorithmLevenberg.h
include/data_structure_objects/: BaseDataStructure.h  DataStructureBases.h  ORBData.h
include/data_structure_objects/connecting/: Misc.h  ProblemStructure.h
include/optimizer_factory/: FactoryProducer.h  OptimizerFactory.h  Settings.h
include/stuff/: Timer.h
include/user_interactive/: ParameterUpdateBase.h  ReprojectionBase.h  RobustKernels.h
src/: Basic_functions.cpp  Bundle_Adjustment.cpp  CMakeLists.txt  FactoryProducer.cpp  Main.cpp  OptimizationAlgorithmBase.cpp  OptimizationAlgorithmGN.cpp  OptimizationAlgorithmLevenberg.cpp  Optimization_general.cpp  OptimizerBase.cpp  OptimizerFactory.cpp  OptimizerOrbSlam.cpp  ProblemStructure.cpp  ReprojectionBase.cpp  data_generate.cpp  general_edge.cpp  general_vertex.cpp  vertex_types.cpp
